--- a/penguin_basic.ipynb
+++ b/penguin_basic.ipynb
@@ -922,10 +922,15 @@
    "source": [
     "# 모델링하기\n",
     "**MAE**: 가장 직관적으로 오차알기(낮을수록 좋음)\\\n",
+    "\n",
     "**MSE**:  너무 못맞춘 예측값이 많을 수록 기하급수적으로 오차가 커짐\\\n",
+    "\n",
     "**RMSE**: MSE 에 루트(root)를 씌운 지표로, MSE 수치 보다 좀더 직관적으로 확인(낮을수록 좋음)\\\n",
+    "\n",
     "**R2**: 회귀선이 실제 값에 얼마나 잘 적합되었는가(높을 수록 적합이 잘 되었다는 의미)\\\n",
-    "**Radj2**: 과적합 현상을 판단\n",
+    "\n",
+    "**Radj2**: 과적합 현상을 판단\\\n",
+    "\n",
     "** 적합도 (R2) 가 높은데, 수정 된 적합도 (Radj2) 가 현저하게 낮다면, 학습 모델이 과적합 되었다고 판단\n"
    ]
   },
@@ -1149,54 +1154,6 @@
     "print(\"R2: {}\".format(round(r2, 2)))\n",
     "print(\"adj_R2: {}\".format(round(adj_r2, 2)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bab1f041",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10fb01a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a97fa68",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb0910ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76f1ca92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e98ddcf5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
